@@ -348,6 +348,7 @@ int do_op(PROGRAMMER * pgm, struct avrpart * p, UPDATE * upd, enum updateflags f
       avrdude_message(MSG_INFO, "%s: failed to read all of %s memory, rc=%d\n",
               progname, mem->desc, rc);
       pgm->err_led(pgm, ON);
+      avr_free_part(v);
       return -1;
     }
     report_progress (1,1,NULL);
@@ -362,6 +363,7 @@ int do_op(PROGRAMMER * pgm, struct avrpart * p, UPDATE * upd, enum updateflags f
       avrdude_message(MSG_INFO, "%s: verification error; content mismatch\n",
               progname);
       pgm->err_led(pgm, ON);
+      avr_free_part(v);
       return -1;
     }
 
@@ -371,6 +373,7 @@ int do_op(PROGRAMMER * pgm, struct avrpart * p, UPDATE * upd, enum updateflags f
     }
 
     pgm->vfy_led(pgm, OFF);
+    avr_free_part(v);
   }
   else {
     avrdude_message(MSG_INFO, "%s: invalid update operation (%d) requested\n",
